Actualización de colores, logo (titulo y header) y unión de ubicación y contacto.

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,23 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Óptica Nur - Contacto</title>
+  <title>Óptica Nur - Ubicación</title>
   
   <!-- CSS GLOBAL -->
   <link rel="stylesheet" href="../assets/css/global.css">
   
   <!-- CSS ESPECÍFICO (cambiar por el nombre de tu página) -->
-  <link rel="stylesheet" href="../assets/css/contacto.css">
+  <link rel="stylesheet" href="../assets/css/ubicacion.css">
   
-  <!-- FUENTE POPPINS -->
+  <!-- FUENTE POPPINS Y FAVICON -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="icon" href="../assets/img/logo-arriba.svg" type="image/svg+xml">
+  <link rel="stylesheet" href="">
 </head>
 
 <body>
   <!-- HEADER (COMÚN) -->
   <header class="header">
     <div class="logo-container">
-      <img src="../assets/img/logo-placeholder.svg" alt="Óptica Nur" class="logo">
+      <a href="index.html"><img src="../assets/img/logo-placeholder.svg" alt="Óptica Nur" class="logo" /></a>
     </div>
     
     <!-- MENÚ NAVEGACIÓN (ESCRITORIO) -->
@@ -28,7 +30,6 @@
         <li><a href="index.html">Inicio</a></li>
         <li><a href="catalogo.html">Catálogo</a></li>
         <li><a href="contacto.html">Contacto</a></li>
-        <li><a href="ubicacion.html">Ubicación</a></li>
         <li><a href="faqs.html">Preguntas Frecuentes</a></li>
       </ul>
     </nav>
