--- a/pages/index.html
+++ b/pages/index.html
@@ -11,15 +11,16 @@
   <!-- CSS ESPECÍFICO (cambiar por el nombre de tu página) -->
   <link rel="stylesheet" href="../assets/css/home.css">
   
-  <!-- FUENTE POPPINS -->
+  <!-- FUENTE POPPINS Y FAVICON -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="icon" href="../assets/img/logo-arriba.svg" type="image/svg+xml">
 </head>
 
 <body>
   <!-- HEADER (COMÚN) -->
   <header class="header">
     <div class="logo-container">
-      <img src="../assets/img/logo-placeholder.svg" alt="Óptica Nur" class="logo">
+      <a href="index.html"><img src="../assets/img/logo-placeholder.svg" alt="Óptica Nur" class="logo" /></a>
     </div>
     
     <!-- MENÚ NAVEGACIÓN (ESCRITORIO) -->
@@ -28,7 +29,6 @@
         <li><a href="index.html">Inicio</a></li>
         <li><a href="catalogo.html">Catálogo</a></li>
         <li><a href="contacto.html">Contacto</a></li>
-        <li><a href="ubicacion.html">Ubicación</a></li>
         <li><a href="faqs.html">Preguntas Frecuentes</a></li>
       </ul>
     </nav>
