--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -22,27 +22,27 @@
   <meta property="og:type" content="website" />
   <meta property="og:locale" content="es_VE" />
 
-  <!-- JSON-LD (ajusta con datos reales) -->
+  <!-- JSON-LD -->
   <script type="application/ld+json">
   {
     "@context":"https://schema.org",
     "@type":"Optician",
     "name":"Óptica Nur",
     "url":"https://tudominio.com",
-    "telephone":"+58-251-XXX-XXXX",
+    "telephone":"+58-426-856-1256",
     "address":{
       "@type":"PostalAddress",
-      "streetAddress":"TODO: Direcciones (ver secciones)",
+      "streetAddress":"Av. Venezuela con Av. Argimiro Bracamonte, Torre Financiera, Piso 2",
       "addressLocality":"Barquisimeto",
       "addressRegion":"Lara",
       "addressCountry":"VE"
-    }
+    },
+    "hasMap":[
+      "https://maps.app.goo.gl/WxXuZ8t4MudQ2b5W6",
+      "https://maps.app.goo.gl/9GqaPMRXH6drHZCv8"
+    ]
   }
   </script>
-
-  <!-- GOOGLE MAPS API (opcional) -->
-  <!-- Reemplaza TU_API_KEY; si no tienes, no es obligatorio: hay fallback a iframe. -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBXoCGvEF-vls9968KA6MNx3rocsjWRV1g&callback=initMap" async defer></script>
 </head>
 
 <body>
@@ -56,7 +56,7 @@
       <ul>
         <li><a href="index.html">Inicio</a></li>
         <li><a href="catalogo.html">Catálogo</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
+        <li><a href="contacto.html" class="activo">Contacto</a></li>
         <li><a href="faqs.html">Preguntas Frecuentes</a></li>
       </ul>
     </nav>
@@ -74,61 +74,6 @@
       <h1 id="main-title" class="titulo-principal">Nuestras Sedes</h1>
       <p class="subtitulo">Encuéntranos fácilmente en Barquisimeto</p>
 
-      <!-- Sede: Centro -->
-      <article class="seccion seccion-sede" id="sede-centro" aria-labelledby="sede-centro-title">
-        <h2 id="sede-centro-title" class="titulo-seccion">Sede Centro</h2>
-
-        <div class="ubi-grid">
-          <!-- Datos -->
-          <div class="card info-card">
-            <div class="detalle-sede">
-              <div class="icono-sede" aria-hidden="true">📍</div>
-              <div>
-                <h3>Dirección</h3>
-                <p>Carrera 18 Esquina Calle 23, Torre Financiera del Centro, Piso 4, Barquisimeto</p>
-              </div>
-            </div>
-
-            <div class="detalle-sede">
-              <div class="icono-sede" aria-hidden="true">🕒</div>
-              <div>
-                <h3>Horarios</h3>
-                <p>Lunes a Viernes: 8:00 AM - 6:00 PM</p>
-                <p>Sábados: 9:00 AM - 2:00 PM</p>
-              </div>
-            </div>
-
-            <div class="detalle-sede">
-              <div class="icono-sede" aria-hidden="true">📞</div>
-              <div>
-                <h3>Teléfono</h3>
-                <p><a href="tel:+582511234567">+58 251 123 4567</a></p>
-              </div>
-            </div>
-
-            <div class="referencias">
-              <h3>Referencias</h3>
-              <p>Frente al Centro Comercial Las Trinitarias, al lado del Banco de Venezuela</p>
-            </div>
-
-            <div class="contacto-acciones">
-              <a class="btn" href="https://www.google.com/maps/search/?api=1&query=10.0725,-69.3260" target="_blank" rel="noopener">Google Maps</a>
-              <a class="btn outline" href="https://waze.com/ul?ll=10.0725%2C-69.3260&navigate=yes" target="_blank" rel="noopener">Waze</a>
-              <a class="btn outline" href="https://wa.me/582511234567" target="_blank" rel="noopener">WhatsApp</a>
-            </div>
-          </div>
-
-          <!-- Mapa -->
-          <aside class="card card-mapa" aria-label="Mapa de la sede centro">
-            <div class="mapa-container">
-              <!-- Map JS target -->
-              <div id="mapa-centro" class="mapa" role="img" aria-label="Mapa de la sede centro"></div>
-            </div>
-            <p class="mapa-nota">Cerca de <strong>Centro Comercial Las Trinitarias</strong>.</p>
-          </aside>
-        </div>
-      </article>
-
       <!-- Sede: Este -->
       <article class="seccion seccion-sede sede-este" id="sede-este" aria-labelledby="sede-este-title">
         <h2 id="sede-este-title" class="titulo-seccion">Sede Este</h2>
@@ -140,7 +85,7 @@
               <div class="icono-sede" aria-hidden="true">📍</div>
               <div>
                 <h3>Dirección</h3>
-                <p>Av. Venezuela entre Av Los Leones y Av. Argimiro Bracamonte, Torre Financiera de Lara, Piso 2 (Torre Sur)</p>
+                <p>Av. Venezuela con Av. Argimiro Bracamonte, Torre Financiera, Piso 2.</p>
               </div>
             </div>
 
@@ -148,8 +93,9 @@
               <div class="icono-sede" aria-hidden="true">🕒</div>
               <div>
                 <h3>Horarios</h3>
-                <p>Lunes a Viernes: 8:30 AM - 6:30 PM</p>
-                <p>Sábados: 9:00 AM - 1:00 PM</p>
+                <p>Lunes a Viernes:</p>
+                <p>8:00 AM - 12:00 M</p>
+                <p>1:00 PM - 4:00 PM</p>
               </div>
             </div>
 
@@ -157,41 +103,113 @@
               <div class="icono-sede" aria-hidden="true">📞</div>
               <div>
                 <h3>Teléfono</h3>
-                <p><a href="tel:+582519876543">+58 251 987 6543</a></p>
+                <p><a href="tel:+584268561256">0426-8561256</a></p>
               </div>
             </div>
 
             <div class="referencias">
               <h3>Referencias</h3>
-              <p>Diagonal al CC Sambil, en la Torre Financiera de Lara</p>
+              <p>Al lado de la Torre Bicentenario</p>
             </div>
 
             <div class="contacto-acciones">
-              <a class="btn" href="https://www.google.com/maps/search/?api=1&query=10.0800,-69.3000" target="_blank" rel="noopener">Google Maps</a>
-              <a class="btn outline" href="https://waze.com/ul?ll=10.0800%2C-69.3000&navigate=yes" target="_blank" rel="noopener">Waze</a>
-              <a class="btn outline" href="https://wa.me/582519876543" target="_blank" rel="noopener">WhatsApp</a>
+              <a class="btn" href="https://maps.app.goo.gl/WxXuZ8t4MudQ2b5W6" target="_blank" rel="noopener">Google Maps</a>
+              <a class="btn outline" href="https://wa.me/584268561256" target="_blank" rel="noopener">WhatsApp</a>
             </div>
           </div>
 
           <!-- Mapa -->
           <aside class="card card-mapa" aria-label="Mapa de la sede este">
             <div class="mapa-container">
-              <div id="mapa-este" class="mapa" role="img" aria-label="Mapa de la sede este"></div>
+              <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3927.123456789012!2d-69.3261888!3d10.072505!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e8767f7988e8a0d%3A0x5b36b8eec549f2e5!2s%C3%93ptica%20Nur!5e0!3m2!1ses!2sve!4v1234567891"
+                width="100%" 
+                height="100%"
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy" 
+                referrerpolicy="no-referrer-when-downgrade"
+                title="Ubicación de Óptica Nur Sede Este">
+              </iframe>
             </div>
-            <p class="mapa-nota">Cerca de <strong>CC Sambil</strong>.</p>
+            <p class="mapa-nota">Mapa <strong>Sede Este</strong></p>
+          </aside>
+        </div>
+      </article>
+
+      <!-- Sede: Centro -->
+      <br>
+      <article class="seccion seccion-sede" id="sede-centro" aria-labelledby="sede-centro-title">
+        <h2 id="sede-centro-title" class="titulo-seccion">Sede Centro</h2>
+
+        <div class="ubi-grid">
+          <!-- Datos -->
+          <div class="card info-card">
+            <div class="detalle-sede">
+              <div class="icono-sede" aria-hidden="true">📍</div>
+              <div>
+                <h3>Dirección</h3>
+                <p>Calle 23 con Carrera 18, Torre Financiera del Centro</p>
+              </div>
+            </div>
+
+            <div class="detalle-sede">
+              <div class="icono-sede" aria-hidden="true">🕒</div>
+              <div>
+                <h3>Horarios</h3>
+                <p>Lunes a Viernes:</p>
+                <p>8:00 AM - 12:00 M</p>
+                <p>1:00 PM - 4:00 PM</p>
+              </div>
+            </div>
+
+            <div class="detalle-sede">
+              <div class="icono-sede" aria-hidden="true">📞</div>
+              <div>
+                <h3>Teléfono</h3>
+                <p><a href="tel:+584268561256">0426-8561256</a></p>
+              </div>
+            </div>
+
+            <div class="referencias">
+              <h3>Referencias</h3>
+              <p>Frente al estacionamiento del Hotel Príncipe</p>
+            </div>
+
+            <div class="contacto-acciones">
+              <a class="btn" href="https://maps.app.goo.gl/9GqaPMRXH6drHZCv8" target="_blank" rel="noopener">Google Maps</a>
+              <a class="btn outline" href="https://wa.me/584268561256" target="_blank" rel="noopener">WhatsApp</a>
+            </div>
+          </div>
+
+          <!-- Mapa -->
+          <aside class="card card-mapa" aria-label="Mapa de la sede centro">
+            <div class="mapa-container">
+              <iframe 
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3927.123456789012!2d-69.3139518!3d10.0653367!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e876712830b6c39%3A0x89b43de26cebad3d!2sCentro%20Oftalmol%C3%B3gico%20Antonio%20Nur!5e0!3m2!1ses!2sve!4v1234567891"
+                width="100%" 
+                height="100%"
+                style="border:0;" 
+                allowfullscreen="" 
+                loading="lazy" 
+                referrerpolicy="no-referrer-when-downgrade"
+                title="Ubicación de Óptica Nur Sede Centro">
+              </iframe>
+            </div>
+            <p class="mapa-nota">Mapa <strong>Sede Centro</strong></p>
           </aside>
         </div>
       </article>
 
       <!-- Sección transporte -->
       <section class="seccion seccion-transporte" aria-labelledby="transporte-title">
-        <h2 id="transporte-title" class="titulo-seccion">Cómo Llegar</h2>
+        <h2 id="transporte-title" class="titulo-seccion">¿Cómo Llegar?</h2>
 
         <div class="contenedor-transporte">
           <div class="opcion-transporte">
             <div class="icono-transporte" aria-hidden="true">🚗</div>
             <h3>En automóvil</h3>
-            <p>Ambas sedes cuentan con estacionamiento privado gratuito para clientes.</p>
+            <p>La <b>Sede Este</b> cuenta con estacionamiento privado gratuito para clientes.</p>
           </div>
 
           <div class="opcion-transporte">
@@ -225,8 +243,8 @@
     <div class="footer-content">
       <p>© <span id="year"></span> Óptica Nur - Barquisimeto, Venezuela</p>
       <div class="social-links">
-        <a href="#" aria-label="Facebook"><img src="../assets/img/icons/facebook.svg" alt="" class="social-icon"></a>
-        <a href="#" aria-label="Instagram"><img src="../assets/img/icons/instagram.svg" alt="" class="social-icon"></a>
+        <a href="https://www.facebook.com/opticanurbarquisimeto/?locale=es_LA" aria-label="Facebook"><img src="../assets/img/icons/facebook.svg" alt="" class="social-icon"></a>
+        <a href="https://www.instagram.com/optica.nur/?hl=es" aria-label="Instagram"><img src="../assets/img/icons/instagram.svg" alt="" class="social-icon"></a>
       </div>
     </div>
   </footer>
@@ -247,44 +265,6 @@
         menuBtn.classList.toggle('active');
       });
     });
-
-    // Inicializar mapas con Google Maps JS API
-    function initMap() {
-      try {
-        // Centro
-        const centroCoords = { lat: 10.0725, lng: -69.3260 }; // TODO: ajustar
-        const mapaCentro = new google.maps.Map(document.getElementById('mapa-centro'), {
-          zoom: 16, center: centroCoords, mapTypeId: 'roadmap', styles: [{ featureType: 'poi', stylers: [{ visibility: 'off' }] }]
-        });
-        new google.maps.Marker({ position: centroCoords, map: mapaCentro, title: 'Óptica Nur - Sede Centro', icon: "../assets/img/icons/marker-optica.png" });
-
-        // Este
-        const esteCoords = { lat: 10.0800, lng: -69.3000 }; // TODO: ajustar
-        const mapaEste = new google.maps.Map(document.getElementById('mapa-este'), {
-          zoom: 16, center: esteCoords, mapTypeId: 'roadmap', styles: [{ featureType: 'poi', stylers: [{ visibility: 'off' }] }]
-        });
-        new google.maps.Marker({ position: esteCoords, map: mapaEste, title: 'Óptica Nur - Sede Este', icon: "../assets/img/icons/marker-optica.png" });
-      } catch (err) {
-        // Si algo falla, el fallback después pintará un mensaje
-        console.warn('initMap error', err);
-      }
-    }
-
-    // Fallback: si Google Maps no carga en 3s, mostrar mensaje y añadir iframe como alternativa.
-    setTimeout(() => {
-      if (typeof google === 'undefined' || !document.getElementById('mapa-centro').innerHTML.trim()) {
-        const mapas = [
-          { id: 'mapa-centro', q: '10.0725,-69.3260' },
-          { id: 'mapa-este', q: '10.0800,-69.3000' }
-        ];
-        mapas.forEach(m => {
-          const container = document.getElementById(m.id);
-          if (container) {
-            container.innerHTML = `<iframe title="Mapa alternativa" loading="lazy" src="https://www.google.com/maps?q=${m.q}&hl=es&z=15&output=embed" style="border:0;width:100%;height:100%"></iframe>`;
-          }
-        });
-      }
-    }, 3000);
   </script>
 </body>
 </html>
