correcion de datos y lugares (solo texto y bordes)

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -221,7 +221,7 @@
           <div class="opcion-transporte">
             <div class="icono-transporte" aria-hidden="true">🅿️</div>
             <h3>Paradas cercanas</h3>
-            <p><strong>Sede Centro:</strong> "Las Trinitarias" (100 m)<br><strong>Sede Este:</strong> "Torre Financiera" (50 m)</p>
+            <p><strong>Sede Centro:</strong> "Hotel Príncipe" (15 m)<br><strong>Sede Este:</strong> "Torre Financiera" (50 m)</p>
           </div>
         </div>
       </section>
