--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -125,7 +125,7 @@
           <aside class="card card-mapa" aria-label="Mapa de la sede este">
             <div class="mapa-container">
               <iframe 
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3927.123456789012!2d-69.3261888!3d10.072505!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e8767f7988e8a0d%3A0x5b36b8eec549f2e5!2s%C3%93ptica%20Nur!5e0!3m2!1ses!2sve!4v1234567891"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3927.123456789012!2d-69.291075!3d10.074063!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMTDCsDA0JzI2LjYiTiA2OcKwMTcnMjEuMCJX!5e0!3m2!1ses!2sve!4v1234567890"
                 width="100%" 
                 height="100%"
                 style="border:0;" 
@@ -212,18 +212,24 @@
           <div class="opcion-transporte">
             <div class="icono-transporte" aria-hidden="true">🚗</div>
             <h3>En automóvil</h3>
-            <p>La <b>Sede Este</b> cuenta con estacionamiento privado gratuito para clientes.</p>
+            <hr>
+            <br>
+            <p>La <b>Sede Este</b> cuenta con estacionamiento <strong>privado gratuito</strong> para clientes.</p>
           </div>
 
           <div class="opcion-transporte">
             <div class="icono-transporte" aria-hidden="true">🚌</div>
-            <h3>Transporte público</h3>
-            <p><strong>Sede Centro:</strong> Rutas 01, 05 y 12<br><strong>Sede Este:</strong> Rutas 08, 15 y 20</p>
+            <h3>Transporte</h3>
+            <hr>
+            <br>
+            <p><strong>Sede Centro:</strong> Rutas 05 y 06<br><strong>Sede Este:</strong> Buses con ruta de ida o vuelta a Yaritagua.</p>
           </div>
 
           <div class="opcion-transporte">
             <div class="icono-transporte" aria-hidden="true">🅿️</div>
             <h3>Paradas cercanas</h3>
+            <hr>
+            <br>
             <p><strong>Sede Centro:</strong> "Hotel Príncipe" (15 m)<br><strong>Sede Este:</strong> "Torre Financiera" (50 m)</p>
           </div>
         </div>
@@ -252,10 +258,21 @@
     </div>
   </footer>
 
+  <!-- BOTÓN MANUAL DE USUARIO -->
+  <button class="btn-manual-usuario" onclick="abrirManual()" aria-label="Abrir manual de usuario">
+    <span><img src="../assets/img/icons/manual_de_usuario.png" alt="" class="boton_manual_usuario"></span>
+    <span class="tooltip">Manual de Usuario</span>
+  </button>
+
   <!-- SCRIPTS -->
   <script>
     // Año dinámico
     document.getElementById('year').textContent = new Date().getFullYear();
+
+    // Función para abrir el manual
+    function abrirManual() {
+      window.open('manual-usuario.html', '_blank', 'width=1000,height=700,scrollbars=yes');
+    }
 
     // Menú hamburguesa mejorado - Solo se activa en móvil
     document.addEventListener("DOMContentLoaded", () => {
